force-app/main/default/objects/Room__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON formatted amenities available in the room</description>
</CustomField> 