force-app/main/default/objects/Room__c/fields/External_Room_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Room_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Room ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
    <description>External API ID for room synchronization</description>
</CustomField> 