force-app/main/default/objects/Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <length>10</length>
    <type>Text</type>
    <description>Floor location of the room</description>
</CustomField> 