force-app/main/default/objects/Room__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
    <description>Indicates if the room is available for booking</description>
</CustomField> 