force-app/main/default/objects/Room__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
    <description>Last time this room was synced with external API</description>
</CustomField> 