force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Focus_Pod</fullName>
                <label>Focus Pod</label>
            </value>
            <value>
                <fullName>Huddle_Room</fullName>
                <label>Huddle Room</label>
            </value>
            <value>
                <fullName>Collaboration_Room</fullName>
                <label>Collaboration Room</label>
            </value>
            <value>
                <fullName>Boardroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of room for booking purposes</description>
</CustomField> 